# MasterThesis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/SRRs_cleaned_with_ethanol/: n_x_direction_ethanol_sample_1.csv  n_x_direction_ethanol_sample_10.csv  n_x_direction_ethanol_sample_10_1.csv  n_x_direction_ethanol_sample_11.csv  n_x_direction_ethanol_sample_11_1.csv  n_x_direction_ethanol_sample_12.csv  n_x_direction_ethanol_sample_12_1.csv  n_x_direction_ethanol_sample_13.csv  n_x_direction_ethanol_sample_13_1.csv  n_x_direction_ethanol_sample_14.csv  n_x_direction_ethanol_sample_14_1.csv  n_x_direction_ethanol_sample_15.csv  n_x_direction_ethanol_sample_15_1.csv  n_x_direction_ethanol_sample_16.csv  n_x_direction_ethanol_sample_16_1.csv  n_x_direction_ethanol_sample_17.csv  n_x_direction_ethanol_sample_17_1.csv  n_x_direction_ethanol_sample_18.csv  n_x_direction_ethanol_sample_18_1.csv  n_x_direction_ethanol_sample_19.csv  n_x_direction_ethanol_sample_19_1.csv  n_x_direction_ethanol_sample_1_1.csv  n_x_direction_ethanol_sample_2.csv  n_x_direction_ethanol_sample_20.csv  n_x_direction_ethanol_sample_20_1.csv  n_x_direction_ethanol_sample_21.csv  n_x_direction_ethanol_sample_21_1.csv  n_x_direction_ethanol_sample_22.csv  n_x_direction_ethanol_sample_22_1.csv  n_x_direction_ethanol_sample_23.csv  n_x_direction_ethanol_sample_23_1.csv  n_x_direction_ethanol_sample_24.csv  n_x_direction_ethanol_sample_24_1.csv  n_x_direction_ethanol_sample_25.csv  n_x_direction_ethanol_sample_25_1.csv  n_x_direction_ethanol_sample_26.csv  n_x_direction_ethanol_sample_26_1.csv  n_x_direction_ethanol_sample_27.csv  n_x_direction_ethanol_sample_27_1.csv  n_x_direction_ethanol_sample_28.csv  (+40 more)
data/SRRs_with_100000ppb_Acetamiprid/: x_direction_acetamiprid_100000ppb_sample_1.csv  x_direction_acetamiprid_100000ppb_sample_10.csv  x_direction_acetamiprid_100000ppb_sample_10_1.csv  x_direction_acetamiprid_100000ppb_sample_11.csv  x_direction_acetamiprid_100000ppb_sample_11_1.csv  x_direction_acetamiprid_100000ppb_sample_12.csv  x_direction_acetamiprid_100000ppb_sample_12_1.csv  x_direction_acetamiprid_100000ppb_sample_13.csv  x_direction_acetamiprid_100000ppb_sample_13_1.csv  x_direction_acetamiprid_100000ppb_sample_14.csv  x_direction_acetamiprid_100000ppb_sample_14_1.csv  x_direction_acetamiprid_100000ppb_sample_15.csv  x_direction_acetamiprid_100000ppb_sample_15_1.csv  x_direction_acetamiprid_100000ppb_sample_16.csv  x_direction_acetamiprid_100000ppb_sample_16_1.csv  x_direction_acetamiprid_100000ppb_sample_17.csv  x_direction_acetamiprid_100000ppb_sample_17_1.csv  x_direction_acetamiprid_100000ppb_sample_18.csv  x_direction_acetamiprid_100000ppb_sample_18_1.csv  x_direction_acetamiprid_100000ppb_sample_19.csv  (+60 more)
need-clean/: classification.ipynb  classification.py  preprocessing.py
notebooks/: 00-load-data.ipynb  00-load_data.ipynb  01-test-models.ipynb
src/: classification.ipynb  classification.py  export.pkl  preprocessing.py
tscls/: __init__.py  dataloaders.py  experiments.py
(+575 files in other folders)
