[project]
name = "master-thesis"
packages = [{include = "data"}]
version = "0.1.0"
description = ""
authors = [
    {name = "Dionysia Petropoulou",email = "petropdiony@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pretty-errors (>=1.2.25,<2.0.0)",
    "numpy (>=1.21.0,<2.3.0)",
    "tsai (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

