[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[project]
authors = [
  {name = "Dionysia Petropoulou", email = "petropdiony@gmail.com"},
  {name = "Georgios Arampatzis", email = "georgios.arampatzis@uoc.gr"}
]
dependencies = [
  "pandas (>=2.3.3,<3.0.0)",
  "matplotlib (>=3.10.7,<4.0.0)",
  "pretty-errors (>=1.2.25,<2.0.0)",
  "numpy (>=1.21.0,<2.3.0)",
  "tsai (>=0.4.1,<0.5.0)",
  "aeon (>=1.3.0,<2.0.0)",
  "ipykernel (>=7.1.0,<8.0.0)",
  "git-filter-repo (>=2.47.0,<3.0.0)",
  "pre-commit (>=4.5.0,<5.0.0)"
]
description = ""
name = "master-thesis"
readme = "README.md"
requires-python = ">=3.10, <=3.13"
version = "0.1.0"

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
exclude = [
  './need-clean/*.py$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.poetry]
packages = [{include = "tscls"}]

[tool.ruff]
exclude = ["need-clean"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = [
  # pylint
  "PLR0913",
  "PLR0915",
  "PLR2004",
  # ruff
  "RUF001",
  # flake8-bandit
  "S101",
  "S102",
  "S602",
  "S603",
  "S604",
  # flake8-annotations
  "ANN",
  # flake8-commas
  "COM819",
  "COM812",
  #
  "NPY002",
  "B027",
  "PD901",
  "PD011",
  "PERF203",
  "A002",
  "A003",
  "PTH",
  "FBT",
  "DTZ",
  "EM",
  "FA100",
  "T201",
  "TRY003",
  "ISC001",
  "N806",
  "N803",
  "SLF001"
]
select = ["ALL"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)"
]
